fix: members ordering and missing fields in group state